k8s/apps/network/external-services/klipper/svc.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: klipper
  namespace: klipper
spec:
  type: ExternalName
  externalName: ${KLIPPER_URL}
  ports:
    - name: http
      port: 80
    - name: moonraker
      port: 7125
