k8s/apps/network/external-services/klipper/ingress.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mainsail
  namespace: klipper
  labels:
    app.kubernetes.io/name: klipper
    app.kubernetes.io/component: mainsail
  annotations:
    kubernetes.io/ingress.class: ingress-internal-traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mainsail.emnt.dev`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: klipper
          namespace: klipper
          port: http
    - kind: Rule
      match: "Host(`mainsail.emnt.dev`) && PathPrefix(`/outpost.goauthentik.io/`)"
      services:
        - name: authentik-server
          namespace: authentik
          port: 9000
